<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.andrew.minecraftcalculator.ItemCalculator">
    <TextView
        android:id="@+id/dchest_label"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:text="@string/dchest_label"
        android:textSize="25sp"
        android:gravity="center" />
    <TextView
        android:id="@+id/schest_label"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/chest_label"
        android:textSize="25sp"
        android:gravity="center" />
    <EditText
        android:id="@+id/dchests_input"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="40sp"
        android:text="@string/zero"
        android:gravity="center"
        android:layout_below="@id/dchest_label"/>
    <EditText
        android:id="@+id/schests_input"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="40sp"
        android:text="@string/zero"
        android:gravity="center"
        android:layout_below="@id/schest_label"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/stack_label"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:text="@string/stack_label"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_below="@id/schests_input"/>
    <TextView
        android:id="@+id/stacks_to_label"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:text="@string/stacks_to_label"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_below="@id/schests_input"
        android:layout_alignParentRight="true"/>
    <ToggleButton
        android:id="@+id/stacks_to_input"
        android:onClick="toggleStackBase"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:textOff="@string/stack_64"
        android:textOn="@string/stack_16"
        android:textSize="40sp"
        android:layout_below="@id/stack_label"
        android:layout_alignParentRight="true"
        android:background="@color/colorPrimary"/>
    <EditText
        android:id="@+id/stacks_input"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="40sp"
        android:text="@string/zero"
        android:gravity="center"
        android:layout_below="@id/stack_label" />
    <TextView
        android:id="@+id/remainder_label"
        android:layout_width="26sp"
        android:layout_height="wrap_content"
        android:text="@string/remainder_label"
        android:textSize="30sp"
        android:layout_toRightOf="@id/stacks_input"
        android:layout_below="@id/stack_label"
        android:layout_alignBottom="@id/stacks_input"
        android:gravity="center"/>
    <TextView
        android:id="@+id/stack_remainder"
        android:layout_width="54sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/zero"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_below="@id/stack_label"
        android:layout_alignBottom="@id/stacks_input"
        android:layout_toRightOf="@id/remainder_label"/>
    <TextView
        android:id="@+id/items_results_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/items_results_label"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_below="@id/stacks_input"/>
    <EditText
        android:id="@+id/items_results_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/zero"
        android:textSize="40sp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_below="@id/items_results_label"/>
    <Button
        android:id="@+id/item_calc_do"
        android:onClick="performItemCalc"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/calc"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:layout_below="@id/items_results_field"
        android:background="@color/colorPrimaryDark" />
    <Button
        android:id="@+id/item_clear_fields"
        android:onClick="clearItemFields"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/clear_button"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_below="@id/item_calc_do"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>
</RelativeLayout>
