<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.andrew.minecraftcalculator.LinearDistance">
    <TextView
        android:id="@+id/x1_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/X1label"
        android:textSize="20sp"
        android:gravity="center" />
    <TextView
        android:id="@+id/y1_label"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Y1label"
        android:textSize="20sp"
        android:gravity="center" />
    <TextView
        android:id="@+id/z1_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/Z1label"
        android:textSize="20sp"
        android:gravity="center" />
    <EditText
        android:id="@+id/x1_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/x1_label"
        android:layout_alignParentLeft="true"
        android:hint="@string/big_hint"
        android:textSize="25sp"
        android:gravity="center"
        android:inputType="numberSigned"/>
    <EditText
        android:id="@+id/y1_input"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/y1_label"
        android:layout_centerHorizontal="true"
        android:hint="@string/little_hint"
        android:textSize="25sp"
        android:gravity="center"
        android:inputType="number"/>
    <EditText
        android:id="@+id/z1_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/z1_label"
        android:layout_alignParentRight="true"
        android:hint="@string/big_hint"
        android:textSize="25sp"
        android:gravity="center"
        android:inputType="numberSigned"/>
    <TextView
        android:id="@+id/x2_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/X2label"
        android:layout_below="@id/x1_input"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:gravity="center" />
    <TextView
        android:id="@+id/y2_label"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/x1_input"
        android:layout_marginTop="40dp"
        android:text="@string/Y2label"
        android:textSize="20sp"
        android:gravity="center" />
    <TextView
        android:id="@+id/z2_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/z1_input"
        android:layout_marginTop="40dp"
        android:text="@string/Z2label"
        android:textSize="20sp"
        android:gravity="center" />
    <EditText
        android:id="@+id/x2_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/x2_label"
        android:layout_alignParentLeft="true"
        android:hint="@string/big_hint"
        android:textSize="25sp"
        android:gravity="center"
        android:inputType="numberSigned"/>
    <EditText
        android:id="@+id/y2_input"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/y2_label"
        android:layout_centerHorizontal="true"
        android:hint="@string/little_hint"
        android:textSize="25sp"
        android:gravity="center"
        android:inputType="number"/>
    <EditText
        android:id="@+id/z2_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/z2_label"
        android:layout_alignParentRight="true"
        android:hint="@string/big_hint"
        android:textSize="25sp"
        android:gravity="center"
        android:inputType="numberSigned"/>
    <TextView
        android:id="@+id/lin_results_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="40dp"
        android:layout_below="@id/y2_input"
        android:gravity="center" />
    <Button
        android:id="@+id/calc_do"
        android:onClick="performCalc"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/calc"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:layout_below="@id/lin_results_field"
        android:background="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/mode_2d"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_below="@id/calc_do"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimary"
        android:onClick="toggleMode"
        android:text="@string/two_dimension"
        android:textAllCaps="false"
        android:textSize="30sp" />
    <Button
        android:id="@+id/mode_3d"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_below="@id/calc_do"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:background="@color/colorPrimary"
        android:onClick="toggleMode"
        android:text="@string/three_dimension"
        android:textAllCaps="false"
        android:textSize="30sp" />
    <Button
        android:id="@+id/clear_fields"
        android:onClick="clearFields"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/mode_3d"
        android:text="@string/clear_button"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@color/colorWarn" />


</RelativeLayout>
