<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:id="@+id/main_grid"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.example.andrew.minecraftcalculator.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/goto_linear_dist"
            android:onClick="launchDistanceCalc"
            android:text="@string/lin_dist"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary" />
        <Button
            android:id="@+id/goto_item_calc"
            android:onClick="launchItemCalc"
            android:text="@string/items"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="0dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/goto_circle_maker"
            android:onClick="launchCircleHelper"
            android:text="@string/circle_maker"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary" />
        <Button
            android:id="@+id/goto_recipes"
            android:onClick="launchRecipeHelper"
            android:text="@string/recipes"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary" />
    </LinearLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/wiki_link"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
</LinearLayout>
